<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.laurennor.teatime.MainActivity"
    android:background="#7bad80">

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/teatime_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:contentDescription="@string/img_desc"/>

    <TextView
        android:id="@+id/store_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tea_time"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_below="@+id/image"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:padding="5dp"
        android:layout_below="@+id/store_title"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_address"
        android:padding="5dp"
        android:layout_below="@+id/phone_number"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cafe_description"
        android:textStyle="italic"
        android:padding="5dp"
        android:layout_below="@id/address"
        android:textSize="18sp"/>
</RelativeLayout>
